[package]
name = "serde-encoded-bytes"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
description = "Efficient bytestring serialization for Serde-supporting types"
repository = "https://github.com/fjarri/serde-encoded-bytes"
readme = "README.md"
categories = ["no-std", "encoding"]
rust-version = "1.70.0"

[dependencies]
serde = { version = "1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }
generic-array-014 = { package = "generic-array", version = "0.14", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"] }
rmp-serde = "1"
serde_json = "1"
ciborium = "0.2"
serde-json-core = { version = "0.6", default-features = false }
toml = "0.8"
serde_asn1_der = "0.8"

[features]
# Unfortunately we need this for the doctests to work
# (since we need some encoding to be present in the API).
# Should be removed when https://github.com/rust-lang/cargo/issues/2911 is fixed.
default = ["hex"]

generic-array-014 = ["dep:generic-array-014"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
